tool/src/dotnet/snapshots/diplomat_tool__dotnet__tests__error_handling@RawFfiResultU32MyModuleError.cs.snap
---
source: tool/src/dotnet/tests.rs
expression: out_texts.get(out).unwrap()
---
// <auto-generated/> by Diplomat

#pragma warning disable 0105
using System;
using System.Runtime.InteropServices;

using Interop.Diplomat;
#pragma warning restore 0105

namespace Interop.Raw;

#nullable enable

[StructLayout(LayoutKind.Sequential)]
public partial struct FfiResultU32MyModuleError
{
    [StructLayout(LayoutKind.Explicit)]
    private unsafe struct InnerUnion
    {
        [FieldOffset(0)]
        internal uint ok;
        [FieldOffset(0)]
        internal MyModuleError err;
    }

    private InnerUnion _inner;

    [MarshalAs(UnmanagedType.U1)]
    public bool isOk;

    public unsafe uint Ok
    {
        get
        {
            return _inner.ok;
        }
    }

    public unsafe MyModuleError Err
    {
        get
        {
            return _inner.err;
        }
    }
}
