tool/src/dotnet/snapshots/diplomat_tool__dotnet__tests__generation_using_default_config@MyLibError.cs.snap
---
source: tool/src/dotnet/tests.rs
expression: out_texts.get(out).unwrap()
---
// <auto-generated/> by Diplomat

#pragma warning disable 0105
using System;
using System.Runtime.InteropServices;

using Interop.Diplomat;
#pragma warning restore 0105

namespace Interop;

#nullable enable

public partial class MyLibError: IDisposable
{
    private unsafe Raw.MyLibError* _inner;

    /// <summary>
    /// Creates a managed <c>MyLibError</c> from a raw handle.
    /// </summary>
    /// <remarks>
    /// Safety: you should not build two managed objects using the same raw handle (may causes use-after-free and double-free).
    /// <br/>
    /// This constructor assumes the raw struct is allocated on Rust side.
    /// If implemented, the custom Drop implementation on Rust side WILL run on destruction.
    /// </remarks>
    public unsafe MyLibError(Raw.MyLibError* handle)
    {
        _inner = handle;
    }

    public static void ToDisplay(DiplomatWrite out)
    {
        unsafe
        {
            Raw.MyLibError.ToDisplay(&out);
        }
    }

    public static string ToDisplay()
    {
        unsafe
        {
            DiplomatWrite write = new DiplomatWrite();
            Raw.MyLibError.ToDisplay(&write);
            string retVal = write.ToUnicode();
            write.Dispose();
            return retVal;
        }
    }

    /// <summary>
    /// Returns the underlying raw handle.
    /// </summary>
    public unsafe Raw.MyLibError* AsFFI()
    {
        return _inner;
    }

    /// <summary>
    /// Destroys the underlying object immediately.
    /// </summary>
    public void Dispose()
    {
        unsafe
        {
            if (_inner == null)
            {
                return;
            }

            Raw.MyLibError.Destroy(_inner);
            _inner = null;

            GC.SuppressFinalize(this);
        }
    }

    ~MyLibError()
    {
        Dispose();
    }
}
