tool/src/dotnet/snapshots/diplomat_tool__dotnet__tests__generation_using_default_config@MyStruct.cs.snap
---
source: tool/src/dotnet/tests.rs
expression: out_texts.get(out).unwrap()
---
// <auto-generated/> by Diplomat

#pragma warning disable 0105
using System;
using System.Runtime.InteropServices;

using Interop.Diplomat;
#pragma warning restore 0105

namespace Interop;

#nullable enable

public partial class MyStruct: IDisposable
{
    private unsafe Raw.MyStruct* _inner;

    /// <summary>
    /// Creates a managed <c>MyStruct</c> from a raw handle.
    /// </summary>
    /// <remarks>
    /// Safety: you should not build two managed objects using the same raw handle (may causes use-after-free and double-free).
    /// <br/>
    /// This constructor assumes the raw struct is allocated on Rust side.
    /// If implemented, the custom Drop implementation on Rust side WILL run on destruction.
    /// </remarks>
    public unsafe MyStruct(Raw.MyStruct* handle)
    {
        _inner = handle;
    }

    /// <exception cref="MyLibErrorException"></exception>
    /// <returns>
    /// A <c>MyStruct</c> allocated on Rust side.
    /// </returns>
    public static MyStruct NewSlice(double[] v)
    {
        unsafe
        {
            nuint vLength = (nuint)v.Length;
            fixed (double* vPtr = v)
            {
                Raw.FfiResultBoxMyStructBoxMyLibError result = Raw.MyStruct.NewSlice(vPtr, vLength);
                if (!result.isOk)
                {
                    throw new MyLibErrorException(new MyLibError(result.Err));
                }
                Raw.MyStruct* retVal = result.Ok;
                return new MyStruct(retVal);
            }
        }
    }

    /// <exception cref="MyLibErrorException"></exception>
    public void SetSlice(double[] newSlice)
    {
        unsafe
        {
            if (_inner == null)
            {
                throw new ObjectDisposedException("MyStruct");
            }
            nuint newSliceLength = (nuint)newSlice.Length;
            fixed (double* newSlicePtr = newSlice)
            {
                Raw.FfiResultVoidBoxMyLibError result = Raw.MyStruct.SetSlice(_inner, newSlicePtr, newSliceLength);
                if (!result.isOk)
                {
                    throw new MyLibErrorException(new MyLibError(result.Err));
                }
            }
        }
    }

    /// <summary>
    /// Returns the underlying raw handle.
    /// </summary>
    public unsafe Raw.MyStruct* AsFFI()
    {
        return _inner;
    }

    /// <summary>
    /// Destroys the underlying object immediately.
    /// </summary>
    public void Dispose()
    {
        unsafe
        {
            if (_inner == null)
            {
                return;
            }

            Raw.MyStruct.Destroy(_inner);
            _inner = null;

            GC.SuppressFinalize(this);
        }
    }

    ~MyStruct()
    {
        Dispose();
    }
}
