tool/src/dotnet/snapshots/diplomat_tool__dotnet__tests__generation_using_default_config@RawMyLibError.cs.snap
---
source: tool/src/dotnet/tests.rs
expression: out_texts.get(out).unwrap()
---
// <auto-generated/> by Diplomat

#pragma warning disable 0105
using System;
using System.Runtime.InteropServices;

using Interop.Diplomat;
#pragma warning restore 0105

namespace Interop.Raw;

#nullable enable

[StructLayout(LayoutKind.Sequential)]
public partial struct MyLibError
{
    private const string NativeLib = "rust";

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "MyLibError_to_display", ExactSpelling = true)]
    public static unsafe extern void ToDisplay(DiplomatWrite* out);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "MyLibError_destroy", ExactSpelling = true)]
    public static unsafe extern void Destroy(MyLibError* self);
}
